# fjson

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  justfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  tests.yml
fjson/: __init__.py  cli.py  main.py
src/fjson/: __about__.py  __init__.py  main.py
test/: test_cli.py  test_solve.py  test_write.py
tests/: test_write.py
