[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fjson"
authors = [
  {name = "Nico Schlömer"},
  {email = "nico.schloemer@gmail.com"}
]
description = "Python JSON writer with float formatting"
readme = "README.md"
license = {file = "LICENSE.txt"}
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fjson.__about__.__version__"}

[project.urls]
homepage = "https://github.com/nschloe/fjson"
code = "https://github.com/nschloe/fjson"
issues = "https://github.com/nschloe/fjson/issues"
funding = "https://github.com/sponsors/nschloe"

[tool.isort]
profile = "black"
