[metadata]
name = fjson
version = 0.1.4
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Python JSON writer with float formatting
url = https://github.com/nschloe/fjson
project_urls =
    Code=https://github.com/nschloe/fjson
    Issues=https://github.com/nschloe/fjson/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
